<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~  Copyright 2018-2026 yangxj96
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.devops00.spectra</groupId>
        <artifactId>spectra-modules</artifactId>
        <version>${revision}</version>
        <relativePath>../spectra-modules/pom.xml</relativePath>
    </parent>

    <artifactId>spectra-launch</artifactId>

    <description>启动模块,使用者的业务也应该在这个包中进行扩展</description>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <!-- === 项目模块-基础功能 === -->
        <!-- 统一通知模块 -->
        <dependency>
            <groupId>com.devops00.spectra</groupId>
            <artifactId>spectra-notification</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!-- 文件上传 -->
        <dependency>
            <groupId>com.devops00.spectra</groupId>
            <artifactId>spectra-upload</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!-- 工作流 -->
        <dependency>
            <groupId>com.devops00.spectra</groupId>
            <artifactId>spectra-workflow</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- === 项目模块-starter === -->
        <!-- Security -->
        <dependency>
            <groupId>com.devops00.spectra</groupId>
            <artifactId>spectra-security-spring-boot-starter</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.devops00.spectra</groupId>
            <artifactId>spectra-log-spring-boot-starter</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- === 项目模块-功能模块 === -->
        <!-- 基础模块 -->
        <dependency>
            <groupId>com.devops00.spectra</groupId>
            <artifactId>spectra-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!-- OA -->
        <dependency>
            <groupId>com.devops00.spectra</groupId>
            <artifactId>spectra-oa</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!-- AI -->
        <dependency>
            <groupId>com.devops00.spectra</groupId>
            <artifactId>spectra-ai</artifactId>
            <version>${project.version}</version>
        </dependency>

    </dependencies>


    <build>
        <plugins>
            <!-- 编译器插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- 启动类 -->
                    <mainClass>com.devops00.spectra.launch.LaunchApplication</mainClass>
                    <!-- 排除lombok -->
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                    <!-- jvm参数 -->
                    <jvmArguments>
                        --add-modules ALL-SYSTEM --enable-native-access=ALL-UNNAMED
                    </jvmArguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
